src/objects/Physical_Reward__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RewardImageURL__c</fullName>
        <label>Reward Image URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowRewardImage__c</fullName>
        <formula>!ISBLANK(RewardImageURL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ShowRewardImage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-Secret</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Class (Lock Picking)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust Hoodie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust T-Shirt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visible_to_Non_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible to Non-Trust</label>
        <type>Checkbox</type>
    </fields>
    <label>Physical Reward</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Physical Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physical Rewards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>